Update OCIO to version 2.3.0

BUG:475598